ZONG-32 continued